src/objects/BLND_DFFF_Sample_Survey__c.object
<CustomObject>
    <description>Survey object stores information about any surveys that were conducted.</description>
    <fields>
        <fullName>BLND_Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sample Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Other_Contact_Email__c</fullName>
        <label>Other Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BLND_Other_Contact_Name__c</fullName>
        <label>Other Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Product_Description__c</fullName>
        <label>Product Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Product_Feedback__c</fullName>
        <label>Product Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLND_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Services_Description__c</fullName>
        <label>Services Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Services_Feedback__c</fullName>
        <label>Services Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLND_Used_PS__c</fullName>
        <label>Used PS</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLND_Will_recommend__c</fullName>
        <label>Will recommend</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Definitely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sample Survey</label>
    <nameField>
        <displayFormat>Survey-{0}</displayFormat>
        <label>Sample Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>